<resources>
    <string name="app_name">BirdsOfFeather</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="default_photo_url">https://www.personality-insights.com/wp-content/uploads/2017/12/default-profile-pic-e1513291410505.jpg</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="photo_url">Photo URL</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="please_provide_a_url_that_contains_a_headshot_photo_of_yourself">Please provide a URL that contains a headshot photo of yourself:</string>
    <string name="course_no">Course No.</string>
    <string name="subject">Subject</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="done">Done</string>
    <string name="enter">Enter</string>
    <string name="classes">Enter Past Classes:</string>
    <string name="enter_classes_description">Enter all of the classes you have previously taken to match with students from those classes</string>
    <string name="classes_you_share">Classes you share</string>
    <string name="back">BACK</string>
    <string name="start">START</string>
    <string name="bof">BoF</string>
    <string name="add_mock">Add mock</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name:</string>
    <string name="cse">CSE</string>
    <string name="_110">110</string>
    <string name="class_size">Class Size:</string>
    <string name="skip_text">SKIP</string>
    <string name="sort">Sort:</string>
    <string name="enter_people_here">Enter People Here</string>
    <string name="add">Add</string>
    <string name="wave">WAVE</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="name">Name</string>
    <string name="rename_session">Rename session</string>
    <string name="session_name">session name</string>
    <string name="favorite_person">favorite person</string>
    <string name="profile_pic">profile_pic</string>
    <string name="user_id">User ID</string>

    <string-array name="years_array">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
    </string-array>

    <string-array name="class_sizes">
        <item>Tiny (&lt;40)</item>
        <item>Small (40–75)</item>
        <item>Medium (75–150)</item>
        <item>Large (150–250)</item>
        <item>Huge (250–400)</item>
        <item>Gigantic (400+)</item>
    </string-array>

    <string-array name="quarters_array">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer Session I</item>
        <item>Summer Session II</item>
        <item>Special Summer Session</item>
    </string-array>

    <string-array name="filters_array">
        <item>Default</item>
        <item>Class Size</item>
        <item>Class Age</item>
    </string-array>

</resources>