<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterClasses">

    <TextView
        android:id="@+id/classes_view"
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:text="@string/classes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/quarter_input"
        android:layout_width="285dp"
        android:layout_height="26dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="@+id/year_input"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subject_input"
        android:layout_width="82dp"
        android:layout_height="39dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:hint="@string/cse"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/quarter_input"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_nbr_input"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:hint="@string/_110"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/subject_input"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subject_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/subject"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:onClick="onDoneClicked"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_btn" />

    <Spinner
        android:id="@+id/year_input"
        android:layout_width="285dp"
        android:layout_height="26dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="164dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/year_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_nbr_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:text="@string/course_no"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quarter_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/quarter"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="370dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="35dp"
        android:text="@string/enter_classes_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="52dp"
        android:onClick="onEnterClicked"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_size_input" />

    <Spinner
        android:id="@+id/class_size_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:entries="@array/class_sizes"
        app:layout_constraintStart_toStartOf="@+id/course_nbr_input"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/class_size_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/class_size"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>